KBUC-ALPHA-1.1